# LeGrad

./: README.md  pyproject.toml
examples/: openclip_cat_remote.py  openclip_coco_batch.py  timm_cat_remote.py  timm_coco_batch.py  torchvision_cat_remote.py
legrad/: utils.py  wrapper.py
src/legrad/: __init__.py  detect.py  types.py  utils.py  wrap.py
src/legrad/backends/openclip/: functional.py  wrapper.py
src/legrad/backends/timm/: functional.py  wrapper.py
src/legrad/backends/torchvision/: functional.py  wrapper.py
tests/: test_cv_wrappers.py  test_openclip_wrapper.py  test_timm_wrapper.py  test_torchvision_wrapper.py
